# firm

./: .env.deploy.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.deploy.yml  docker-compose.yml  fly.gateway.toml  fly.procurer.toml  fly.worker.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  skills-lock.json
apps/firm/: .env.example  Dockerfile  GATEWAY_HANDOFF.md  README.md  pyproject.toml
apps/firm-gateway/: .env.example  Dockerfile  FIRST_CUSTOMER_RUNBOOK.md  package.json
apps/firm/migrations/: 001_init.sql  002_add_refund.sql  003_firm_quotes.sql  004_job_params.sql  005_procurement_attempts.sql
apps/firm/src/firm/: __init__.py  cli.py  config.py  graph.py  health.py  market_snapshot.py  models.py  pricing.py  procurer.py  sourcing.py  storage.py  types.py  validation.py  worker.py
apps/firm/tests/: test_health.py  test_market_snapshot.py  test_pricing.py  test_sourcing.py  test_storage.py  test_validation.py  test_worker.py
data/: marketplace-health-2026-07-21.json  marketplace-health-report.md  marketplace-scan.json  vendor-index.demo.json  vendor-index.g2.json  vendor-index.json  vendor-reliability-2026-07-21.json  vendor-report.json  vendor-report.md  vendor-vetting-2026-07-21.json
docs/firm/: CODEX_REVIEW_2026-07-21.md  DEPLOY.md  EXTERNAL_TEST_BRIEF.md  G2_RUNBOOK.md  G3_RUNBOOK.md  HANDOFF_ISHITA.md  INTERFACES.md  LISTING_DRAFT.md  LIVE_PAYMENT_RUNBOOK.md  PLAN.md  PROMPT_CODEX_JUDGE.md  PROMPT_CODEX_REVIEW.md  PROMPT_GROK_JUDGE.md  PROMPT_GROK_RESEARCH_READ.md  PROMPT_STITCH_UI.md  (+1 more)
(+49 files in other folders)
