[project]
name = "firm-worker"
version = "0.1.0"
description = "LangGraph worker for Firm projects and express runs"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "langgraph>=0.2.60",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.0"
]

[project.scripts]
firm-worker = "firm.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
